[package]
name = "human-hash"
version = "0.2.1"
authors = ["James Munns <james.munns@gmail.com>"]
license = "MIT"
description = "Generate human readable hash digests"
repository = "https://github.com/jamesmunns/human-hash-rs"
documentation = "https://docs.rs/crate/human-hash/"
edition = "2021"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
